<resources>
    <string name="app_name">Focus Tasks</string>
    <string name="title_timer">Timer</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="start">Начать</string>
    <string name="resume">Продолжить</string>
    <string name="stop">Стоп</string>
    <string name="pause">Пауза</string>
    <string name="timer_ready_to_start">Таймер готов к старту</string>
    <string name="timer_paused">Таймер приостановлен</string>
    <string name="timer_running">Таймер выполняется</string>
    <string name="close">Закрыть</string>
    <string name="create_tab">+ Создать</string>
    <string name="new_task">Новая задача</string>
    <string name="save">Сохранить</string>
    <string name="high">Высокий</string>
    <string name="medium">Средний</string>
    <string name="low">Низкий</string>
    <string name="none">Нет</string>
    <string name="description">Описание</string>
    <string name="every">кажд.</string>
    <string name="day">день</string>
    <string name="week">неделя</string>
    <string name="month">месяц</string>
    <string name="year">год</string>
    <string name="first">перв.</string>
    <string name="second">втор.</string>
    <string name="third">трет.</string>
    <string name="fourth">четверт.</string>
    <string name="last">последн.</string>
    <string name="daily">ежедневно</string>
    <string name="weekly">еженедельно</string>
    <string name="monthly">ежемесячно</string>
    <string name="weeks">недели</string>
    <string name="days">дней</string>
    <string name="yearly">ежегодно</string>
    <string name="select_time">Выбрать время</string>
    <string name="dialog_negative_button_text">Закрыть</string>
    <string name="dialog_positive_button_text">Готово</string>
    <string name="repeat">Повторять</string>
    <string name="set_time">Выбрать время</string>
    <string name="at_time">в</string>
    <string name="base_list_name">Задачи</string>
    <string name="add_a_list">Добавить список</string>
    <string name="this_list_already_exists">Такой список уже существует</string>
    <string name="rename_list">Переименовать список</string>
    <string name="delete_list">Удалить список</string>
    <string name="delete_completed_tasks">Удалить выполненные задачи</string>
    <string name="sort_by">Отсортировать по</string>
    <string name="the_only_existing_list_cannot_be_deleted">Единственный существующий список не может быть удален</string>
    <string name="list_name">Название списка</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="completed">Выполненные (%1$d)</string>
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="there_is_no_tasks">Пока нет задач</string>
    <string name="there_is_no_completed_tasks">Нет выполненных задач для удаления</string>
    <string name="create_new_task">Создайте новую задачу, нажав на +</string>
    <string name="on_the_xx_rd">%1$d числа</string>
    <string name="on_the_last_day">в последний день</string>
    <string name="are_you_sure_you_want_to_delete_the_list">Вы уверены, что хотите удалить список?</string>
    <string name="delete">Удалить</string>
    <string name="all_tasks_in_the_list_will_be_permanently_deleted">Все задачи в списке будут безвозвратно удалены</string>
    <string name="you_cant_create_a_list_with_blank_name">Вы не можете создать список с пустым названием</string>

    <!--first day is sunday, last day is saturday-->
    <string-array name="calendar_days_1_letter">
        <item>В</item>  <!--sunday-->
        <item>П</item>  <!--monday-->
        <item>В</item>  <!--tuesday-->
        <item>С</item>  <!--wednesday-->
        <item>Ч</item>  <!--thursday-->
        <item>П</item>  <!--friday-->
        <item>С</item>  <!--saturday-->
    </string-array>

    <!--first day is sunday, last day is saturday-->
    <string-array name="calendar_days_2_letters">
        <item>вс</item>  <!--sunday-->
        <item>пн</item>  <!--monday-->
        <item>вт</item>  <!--tuesday-->
        <item>ср</item>  <!--wednesday-->
        <item>чт</item>  <!--thursday-->
        <item>пт</item>  <!--friday-->
        <item>сб</item>  <!--saturday-->
    </string-array>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="calendar_days_from_1_to_31">
        <item>1 число</item>
        <item>2 число</item>
        <item>3 число</item>
        <item>4 число</item>
        <item>5 число</item>
        <item>6 число</item>
        <item>7 число</item>
        <item>8 число</item>
        <item>9 число</item>
        <item>10 число</item>
        <item>11 число</item>
        <item>12 число</item>
        <item>13 число</item>
        <item>14 число</item>
        <item>15 число</item>
        <item>16 число</item>
        <item>17 число</item>
        <item>18 число</item>
        <item>19 число</item>
        <item>20 число</item>
        <item>21 число</item>
        <item>22 число</item>
        <item>23 число</item>
        <item>24 число</item>
        <item>25 число</item>
        <item>26 число</item>
        <item>27 число</item>
        <item>28 число</item>
        <item>29 число</item>
        <item>30 число</item>
        <item>31 число</item>
        <item>последний день</item>
    </string-array>

</resources>